@@ -174,6 +174,8 @@ debian-installer (20040924) UNRELEASED; urgency=high
   * Steve Langasek
     - Trim various unneeded udebs from the alpha netboot and cdrom
       initrds.
+  * Thiemo Seufer
+    - Add all_rebuild convenience rule.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 24 Sep 2004 14:06:51 +0200
 
